# dev_me_up

./: .gitignore  README.MD  docker-compose.yaml
backend/: .coveragerc  .flake8  Dockerfile  entrypoint.sh  pyproject.toml
backend/config/: settings.py  urls.py
backend/envs/: .gitignore  backend.default.env  postgres.default.env
backend/fixtures/: users_data.json
backend/postman_collection/: requests_collection.json
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/helpers/: nick_generator.py
backend/users/migrations/: 0001_initial.py  0002_superuser.py
