[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for DevMeUp app"
authors = ["SlawCzech <slaw.czech@gmail.com>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.3"
pytest = "7.4.0"
pytest-django = "4.5.2"
pytest-cov = "4.1.0"
flake8 = "6.0.0"
black = "23.7.0"
flake8-django = "1.3"
django-sphinxdoc = "2.0.0"
djangorestframework = "3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
